mobile screen right alignment bug fixed

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,6 @@ body {
 .jumbotron {
     background-color: transparent;
     text-align: center;
-    padding: 30px 30px;
 }
 
 .jumbotron h1,
